tests/ui/traits/constrained-type-params-trait-impl.stderr
error[E0119]: conflicting implementations of trait `Foo<_>` for type `[isize; 0]`
  --> $DIR/constrained-type-params-trait-impl.rs:37:1
   |
LL | impl<T> Foo<T> for [isize; 0] {
   | ----------------------------- first implementation here
...
LL | impl<T, U> Foo<T> for U {
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `[isize; 0]`

error[E0119]: conflicting implementations of trait `Foo<[isize; 0]>` for type `[isize; 0]`
  --> $DIR/constrained-type-params-trait-impl.rs:57:1
   |
LL |   impl<T> Foo<T> for [isize; 0] {
   |   ----------------------------- first implementation here
...
LL | / impl<T, U, V> Foo<T> for T
LL | | where
LL | |     (T, U): Bar<Out = V>,
   | |_________________________^ conflicting implementation for `[isize; 0]`

error[E0119]: conflicting implementations of trait `Foo<([isize; 0], _)>` for type `[isize; 0]`
  --> $DIR/constrained-type-params-trait-impl.rs:67:1
   |
LL |   impl<T> Foo<T> for [isize; 0] {
   |   ----------------------------- first implementation here
...
LL | / impl<T, U, V> Foo<(T, U)> for T
LL | | where
LL | |     (T, U): Bar<Out = V>,
   | |_________________________^ conflicting implementation for `[isize; 0]`

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/constrained-type-params-trait-impl.rs:21:9
   |
LL | impl<T, U> Foo<T> for [isize; 1] {
   |         ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/constrained-type-params-trait-impl.rs:42:9
   |
LL | impl<T, U> Bar for T {
   |         ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/constrained-type-params-trait-impl.rs:48:9
   |
LL | impl<T, U> Bar for T
   |         ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/constrained-type-params-trait-impl.rs:57:9
   |
LL | impl<T, U, V> Foo<T> for T
   |         ^ unconstrained type parameter

error[E0207]: the type parameter `V` is not constrained by the impl trait, self type, or predicates
  --> $DIR/constrained-type-params-trait-impl.rs:57:12
   |
LL | impl<T, U, V> Foo<T> for T
   |            ^ unconstrained type parameter

error[E0119]: conflicting implementations of trait `Bar`
  --> $DIR/constrained-type-params-trait-impl.rs:48:1
   |
LL |   impl<T, U> Bar for T {
   |   -------------------- first implementation here
...
LL | / impl<T, U> Bar for T
LL | | where
LL | |     T: Bar<Out = U>,
   | |____________________^ conflicting implementation

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0119, E0207.
For more information about an error, try `rustc --explain E0119`.
